finished the most of the redesign
just need to add resume

--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
   <section id="welcome-section" class="welcome-section">
     <h1>Hello! Welcome to my Personal Website. </h1>
     <p>My name is Devion Buchynsky, I am currenly a senior CS student at Bowling Green State University. </p>
+    <br>
+    <p>I enjoy doing frontend development and learning new frameworks like React.js. I am currenly learning TypeScript.</p>
+    <br>
+    <p>A fun fact about me is that a hobby of mine is Mechanical Keyboards. As some one that spends a lot of time on a keyboard, 
+      a great keyboard is important to me. I have built my own keyboard from scratch. I had to solder the swiches to the PCB and 
+      also program the keyboard so that it would work properly and include all of the keys that it was missing since it was a 68% keyboard. 
+      A 68% keyboard means that it only has 68 keys on it. I had to make sure that all of the function keys were on a different layer when 
+      I pressed certain keys to switch between the layers of the keyboard. I very much enjoy doing D.I.Y. projects. </p>
+
   </section>
   
   <!-- END WELCOME SECTION -->
@@ -52,32 +61,47 @@
       <div class="fillmult" data-width="70%">
           <span><b>C++</b></span>    
       </div>
-  </div>
+    </div>
     <div class="container">
       <div class="fillmult" data-width="65%">
           <span><b>HTML</b></span>    
       </div>
-  </div>
-  <div class="container">
+    </div>
+    <div class="container">
       <div class="fillmult" data-width="65%">
           <span><b>CSS</b></span>    
       </div>
-  </div>
-  <div class="container">
-      <div class="fillmult" data-width="40%">
-          <span><b>JAVASCRIPT</b></span>    
+    </div>
+    <div class="container">
+      <div class="fillmult" data-width="45%">
+          <span><b>JavaScript</b></span>    
       </div>
-  </div>
-  <div class="container">
+    </div>
+    <div class="container">
       <div class="fillmult" data-width="50%">
-          <span><b>PYTHON</b></span>    
+          <span><b>Python</b></span>    
       </div>
-  </div>
-  <div class="container">
+    </div>
+    <div class="container">
       <div class="fillmult" data-width="30%">
           <span><b>PHP</b></span>    
       </div>
-  </div>
+    </div>
+    <div class="container">
+      <div class="fillmult" data-width="40%">
+        <span><b>React.js</b></span>    
+      </div>
+    </div>
+    <div class="container">
+      <div class="fillmult" data-width="25%">
+          <span><b>SQL</b></span>    
+      </div>
+    </div>
+    <div class="container">
+      <div class="fillmult" data-width="35%">
+          <span><b>TypeScript</b></span>    
+      </div>
+    </div>
     
     
   </section> 
@@ -91,13 +115,29 @@
   
     <div class="projects-grid">
       <a
+        href="https://github.com/devionb/movie-database-with-react"
+        target="_blank"
+        class="project project-tile"
+      >
+        <img
+          class="project-image"
+          src="images/react-moviedb-1.jpg"
+          alt="project"
+        />
+        <p class="project-title">
+          <span class="code">&lt;</span>
+          Movie DataBase with React.JS
+          <span class="code">&#47;&gt;</span>
+        </p>
+      </a>
+      <a
         href="https://github.com/devionb/PokeDex-with-JS"
         target="_blank"
         class="project project-tile"
       >
         <img
           class="project-image"
-          src="jpg image from folder pokedex"
+          src="images/pokedex_screenshot.jpg"
           alt="project"
         />
         <p class="project-title">
@@ -113,12 +153,12 @@
       >
         <img
           class="project-image"
-          src="jpg image dad joke generator"
+          src="images/dad-joke-generator.jpg"
           alt="project"
         />
         <p class="project-title">
           <span class="code">&lt;</span>
-          Random Quote Machine
+          Dad Joke Generator
           <span class="code">&#47;&gt;</span>
         </p>
       </a>
@@ -129,7 +169,7 @@
       >
         <img
           class="project-image"
-          src="todo list image"
+          src="images/todo-list.jpg"
           alt="project"
         />
         <p class="project-title">
@@ -145,7 +185,7 @@
       >
         <img
           class="project-image"
-          src="interative product page image"
+          src="images/interactive-product-page-space-gray .jpg"
           alt="project"
         />
         <p class="project-title">
@@ -161,7 +201,7 @@
       >
         <img
           class="project-image"
-          src="v1 website image"
+          src="images/website_v1.jpg"
           alt="project"
         />
         <p class="project-title">
@@ -170,7 +210,7 @@
           <span class="code">&#47;&gt;</span>
         </p>
       </a>
-      <a
+      <!--<a
         href="link"
         target="_blank"
         class="project project-tile"
@@ -185,7 +225,7 @@
           Title
           <span class="code">&#47;&gt;</span>
         </p>
-      </a>
+      </a> -->
     </div>
   
     <a
@@ -202,8 +242,8 @@
   
   <section id="contact" class="contact-section">
     <div class="contact-section-header">
-      <h2>Let's work together...</h2>
-      <p>How do you take your coffee?</p>
+      <h2>Feel Free to Contact me.</h2>
+      <!-- <p>feel free to contact me</p> -->
     </div>
     <div class="linkedin-links">
       <a
