--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a href="#contact">Contact</a>
       </li>
       <li>
-          <a href="resume">Resume</a>
+          <a href="resume_june.pdf">Resume</a>
       </li>
     </ul>
   </nav>
@@ -64,7 +64,7 @@
     </div>
     <div class="container">
       <div class="fillmult" data-width="65%">
-          <span><b>HTML</b></span>    
+          <span><b>HTML5</b></span>    
       </div>
     </div>
     <div class="container">
